Fixes glitch in low res loading image size being the wrong size on mobile.

--- a/src/sass/partials/_hero_presentation.scss
+++ b/src/sass/partials/_hero_presentation.scss
@@ -166,10 +166,15 @@
             @include aspect-ratio (100, 0, 23, 10.35);
             min-height: rem(364);
         }
-
         @media screen and (max-width:em(800)) {
             &::after {
                 background-size: auto 366px;
+            }
+        }
+        @media screen and (max-width:em(430)) {
+            &::after {
+                background-size: auto 130vw;
+                @include aspect-ratio (100, 0, 23, 30);
             }
         }
     }
